--- a/Inv.Backend/Views/Products/Create.cshtml
+++ b/Inv.Backend/Views/Products/Create.cshtml
@@ -34,7 +34,7 @@
 		</div>
 
 		<div class="form-group">
-			@Html.LabelFor(model => model.MeasureUnitId, "MeasureUnitId", htmlAttributes: new { @class = "control-label col-md-2" })
+			@Html.LabelFor(model => model.MeasureUnitId, htmlAttributes: new { @class = "control-label col-md-2" })
 			<div class="col-md-10">
 				@Html.DropDownList("MeasureUnitId", null, htmlAttributes: new { @class = "form-control" })
 				@Html.ValidationMessageFor(model => model.MeasureUnitId, "", new { @class = "text-danger" })
