--- a/Inv.Backend/Views/Items/Create.cshtml
+++ b/Inv.Backend/Views/Items/Create.cshtml
@@ -1,20 +1,18 @@
-﻿@model Inv.Backend.Models.ProductView
+﻿@model Inv.Backend.Models.ItemView
 
 @{
-	/**/
-
 	ViewBag.Title = "Create";
 }
 
 <h2>Create</h2>
 
 
-@using (Html.BeginForm("Create", "Products", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Create", "Items", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
 	@Html.AntiForgeryToken()
 
 	<div class="form-horizontal">
-		<h4>Product</h4>
+		<h4>Item</h4>
 		<hr />
 		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
 		<div class="form-group">
@@ -34,7 +32,7 @@
 		</div>
 
 		<div class="form-group">
-			@Html.LabelFor(model => model.MeasureUnitId, htmlAttributes: new { @class = "control-label col-md-2" })
+			@Html.LabelFor(model => model.MeasureUnitId, "MeasureUnitId", htmlAttributes: new { @class = "control-label col-md-2" })
 			<div class="col-md-10">
 				@Html.DropDownList("MeasureUnitId", null, htmlAttributes: new { @class = "form-control" })
 				@Html.ValidationMessageFor(model => model.MeasureUnitId, "", new { @class = "text-danger" })
@@ -50,16 +48,6 @@
 			</div>
 		</div>
 
-		<!--
-		<div class="form-group">
-			@Html.LabelFor(model => model.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
-			<div class="col-md-10">
-				@Html.EditorFor(model => model.ImagePath, new { htmlAttributes = new { @class = "form-control" } })
-				@Html.ValidationMessageFor(model => model.ImagePath, "", new { @class = "text-danger" })
-			</div>
-		</div>
-		-->
-
 		<div class="form-group">
 			@Html.LabelFor(model => model.IsAvailable, htmlAttributes: new { @class = "control-label col-md-2" })
 			<div class="col-md-10">
@@ -72,13 +60,15 @@
 
 		<div class="form-group">
 			<div class="col-md-offset-2 col-md-10">
-				<input type="submit" value="Create" class="btn btn-primary" />
-				@Html.ActionLink("Back to List", "Index", new { }, new { @class = "btn btn-success" })
+				<input type="submit" value="Create" class="btn btn-default" />
 			</div>
 		</div>
 	</div>
 }
 
+<div>
+	@Html.ActionLink("Back to List", "Index")
+</div>
 
 @section Scripts {
 	@Scripts.Render("~/bundles/jqueryval")
