--- a/Inv.Backend/Views/Items/Delete.cshtml
+++ b/Inv.Backend/Views/Items/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Inv.Common.Models.Product
+﻿@model Inv.Common.Models.Item
 
 @{
     ViewBag.Title = "Delete";
@@ -8,7 +8,7 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Product</h4>
+    <h4>Item</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -57,8 +57,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-danger" /> |
-            @Html.ActionLink("Back to List", "Index", new { }, new { @class = "btn btn-success" })
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
