--- a/Inv.Backend/Views/Items/Edit.cshtml
+++ b/Inv.Backend/Views/Items/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Inv.Backend.Models.ProductView
+﻿@model Inv.Backend.Models.ItemView
 
 @{
 	ViewBag.Title = "Edit";
@@ -7,15 +7,15 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm("Edit", "Products", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Edit", "Items", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
 	@Html.AntiForgeryToken()
 
 <div class="form-horizontal">
-	<h4>Product</h4>
+	<h4>Item</h4>
 	<hr />
 	@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-	@Html.HiddenFor(model => model.ProductId)
+	@Html.HiddenFor(model => model.ItemId)
 	@Html.HiddenFor(model => model.ImagePath)
 
 	<div class="form-group">
@@ -35,7 +35,7 @@
 	</div>
 
 	<div class="form-group">
-		@Html.LabelFor(model => model.MeasureUnitId, "MeasureUnitId", htmlAttributes: new { @class = "control-label col-md-2" })
+		@Html.LabelFor(model => model.MeasureUnitId, htmlAttributes: new { @class = "control-label col-md-2" })
 		<div class="col-md-10">
 			@Html.DropDownList("MeasureUnitId", null, htmlAttributes: new { @class = "form-control" })
 			@Html.ValidationMessageFor(model => model.MeasureUnitId, "", new { @class = "text-danger" })
@@ -63,13 +63,15 @@
 
 	<div class="form-group">
 		<div class="col-md-offset-2 col-md-10">
-			<input type="submit" value="Save" class="btn btn-primary" />
-			@Html.ActionLink("Back to List", "Index", new { }, new { @class = "btn btn-success" })
+			<input type="submit" value="Save" class="btn btn-default" />
 		</div>
 	</div>
 </div>
 }
 
+<div>
+	@Html.ActionLink("Back to List", "Index")
+</div>
 
 @section Scripts {
 	@Scripts.Render("~/bundles/jqueryval")
