--- a/Inv.Backend/Views/Shared/_Layout.cshtml
+++ b/Inv.Backend/Views/Shared/_Layout.cshtml
@@ -24,8 +24,10 @@
 					<li>@Html.ActionLink("Home", "Index", "Home")</li>
 					<li>@Html.ActionLink("About", "About", "Home")</li>
 					<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-					<li>@Html.ActionLink("Products", "Index", "Products")</li>
+					<li>@Html.ActionLink("Items", "Index", "Items")</li>
 					<li>@Html.ActionLink("Unit of Measure", "Index", "MeasureUnits")</li>
+					<li>@Html.ActionLink("Locations", "Index", "Locations")</li>
+					<li>@Html.ActionLink("Bins", "Index", "Bins")</li>
 				</ul>
                 @Html.Partial("_LoginPartial")
             </div>
