--- a/Inv.Backend/Views/Shared/_Layout.cshtml
+++ b/Inv.Backend/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
 					<li>@Html.ActionLink("Unit of Measure", "Index", "MeasureUnits")</li>
 					<li>@Html.ActionLink("Locations", "Index", "Locations")</li>
 					<li>@Html.ActionLink("Bins", "Index", "Bins")</li>
+					<li>@Html.ActionLink("Counts", "Index", "Counts")</li>
+
 				</ul>
                 @Html.Partial("_LoginPartial")
             </div>
