--- a/Inv.Backend/Views/Items/Delete.cshtml
+++ b/Inv.Backend/Views/Items/Delete.cshtml
@@ -1,64 +1,65 @@
 ﻿@model Inv.Common.Models.Item
 
 @{
-    ViewBag.Title = "Delete";
+	ViewBag.Title = "Delete";
 }
 
 <h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Item</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.MeasureUnit.Description)
-        </dt>
+	<h4>Item</h4>
+	<hr />
+	<dl class="dl-horizontal">
+		<dt>
+			@Html.DisplayNameFor(model => model.MeasureUnit.Description)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.MeasureUnit.Description)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.MeasureUnit.Description)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Barcode)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.Barcode)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Barcode)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.Barcode)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.Description)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Description)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.Description)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ImagePath)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.ImagePath)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ImagePath)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.ImagePath)
+		</dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsAvailable)
-        </dt>
+		<dt>
+			@Html.DisplayNameFor(model => model.IsAvailable)
+		</dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsAvailable)
-        </dd>
+		<dd>
+			@Html.DisplayFor(model => model.IsAvailable)
+		</dd>
 
-    </dl>
+	</dl>
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
+	@using (Html.BeginForm())
+	{
+		@Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+		<div class="form-actions no-color">
+			<input type="submit" value="Delete" class="btn btn-default" /> |
+			@Html.ActionLink("Back to List", "Index")
+		</div>
+	}
 </div>
