--- a/Inv.Backend/Views/Counts/Delete.cshtml
+++ b/Inv.Backend/Views/Counts/Delete.cshtml
@@ -12,35 +12,35 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ItemId)
+            @Html.DisplayNameFor(model => model.Bin.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.ItemId)
+            @Html.DisplayFor(model => model.Bin.Description)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LocationId)
+            @Html.DisplayNameFor(model => model.Item.Barcode)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LocationId)
+            @Html.DisplayFor(model => model.Item.Barcode)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.BinId)
+            @Html.DisplayNameFor(model => model.Location.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.BinId)
+            @Html.DisplayFor(model => model.Location.Description)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.MeasureUnitId)
+            @Html.DisplayNameFor(model => model.MeasureUnit.Description)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.MeasureUnitId)
+            @Html.DisplayFor(model => model.MeasureUnit.Description)
         </dd>
 
         <dt>
