--- a/Inv.Backend/Views/Shared/_Layout.cshtml
+++ b/Inv.Backend/Views/Shared/_Layout.cshtml
@@ -24,12 +24,16 @@
 					<li>@Html.ActionLink("Home", "Index", "Home")</li>
 					<li>@Html.ActionLink("About", "About", "Home")</li>
 					<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-					<li>@Html.ActionLink("Items", "Index", "Items")</li>
-					<li>@Html.ActionLink("Unit of Measure", "Index", "MeasureUnits")</li>
-					<li>@Html.ActionLink("Locations", "Index", "Locations")</li>
-					<li>@Html.ActionLink("Bins", "Index", "Bins")</li>
-					<li>@Html.ActionLink("Counts", "Index", "Counts")</li>
-
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Inventory<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li>@Html.ActionLink("Items", "Index", "Items")</li>
+							<li>@Html.ActionLink("Unit of Measure", "Index", "MeasureUnits")</li>
+							<li>@Html.ActionLink("Locations", "Index", "Locations")</li>
+							<li>@Html.ActionLink("Bins", "Index", "Bins")</li>
+							<li>@Html.ActionLink("Counts", "Index", "Counts")</li>
+						</ul>
+					</li>
 				</ul>
                 @Html.Partial("_LoginPartial")
             </div>
