--- a/Inv/Inv/App.xaml
+++ b/Inv/Inv/App.xaml
@@ -6,12 +6,12 @@
     <Application.Resources>
         <ResourceDictionary>
             <!-- Locator -->
-            <!-- <infra:InstanceLocator x:Key="Locator" /> -->
+            <infra:InstanceLocator x:Key="Locator" />
 
             <!-- Parameters -->
             <x:String x:Key="UrlAPI">http://200.55.241.235/InvAPI/</x:String>
             <x:String x:Key="UrlPrefix">/api</x:String>
-            <x:String x:Key="UrlProductsController">/Products</x:String>
+            <x:String x:Key="UrlCountsController">/Counts</x:String>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
