--- a/Inv/Inv/Views/LoginPage.xaml
+++ b/Inv/Inv/Views/LoginPage.xaml
@@ -12,7 +12,7 @@
                 Padding="5">
                 <Image  
                     HeightRequest="150"
-                    Source="sales">
+                    Source="login">
                 </Image>
                 <Grid
                     Margin="10,0"
