--- a/Inv/Inv/Views/LoginPage.xaml
+++ b/Inv/Inv/Views/LoginPage.xaml
@@ -7,7 +7,8 @@
              Title="{i18n:Translate Login}">
     <ContentPage.Content>
         <ScrollView
-            BindingContext="{Binding Login}">
+            BindingContext="{Binding Login}"
+            BackgroundColor="{StaticResource Primary_Light}">
             <StackLayout
                 Padding="5">
                 <Image  
@@ -25,6 +26,7 @@
                         Grid.Row="0"
                         Grid.Column="0"
                         Text="{i18n:Translate EMail}"
+                        TextColor="{StaticResource FontColor}"
                         VerticalOptions="Center">
                     </Label>
                     <Entry
@@ -38,6 +40,7 @@
                         Grid.Row="1"
                         Grid.Column="0"
                         Text="{i18n:Translate Password}"
+                        TextColor="{StaticResource FontColor}"
                         VerticalOptions="Center">
                     </Label>
                     <Entry
@@ -55,6 +58,7 @@
                     <Label
                         HorizontalOptions="StartAndExpand"
                         Text="{i18n:Translate Rememberme}"
+                        TextColor="{StaticResource FontColor}"
                         VerticalOptions="Center">
                     </Label>
                     <Switch
@@ -65,7 +69,7 @@
                 <Label
                     HorizontalOptions="Center"
                     Text="{i18n:Translate Forgot}"
-                    TextColor="Blue"
+                    TextColor="{StaticResource Primary_text}"
                     VerticalOptions="CenterAndExpand">
                     <Label.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding ForgotPasswordComand}"/>
@@ -87,17 +91,17 @@
                         HorizontalOptions="FillAndExpand"
                         IsEnabled="{Binding IsEnabled}"
                         Text="{i18n:Translate Login}"
-                        TextColor="White">
+                        TextColor="{StaticResource AccentColor2}">
                     </Button>
                     <Button
-                        BackgroundColor="Purple"
+                        BackgroundColor="{StaticResource Accent}"
                         BorderRadius="23"
                         Command="{Binding RegisterCommand}"
                         HeightRequest="46"
                         HorizontalOptions="FillAndExpand"
                         IsEnabled="{Binding IsEnabled}"
                         Text="{i18n:Translate Register}"
-                        TextColor="White">
+                        TextColor="{StaticResource Icons}">
                     </Button>
                 </StackLayout>
             </StackLayout>
