--- a/Inv/Inv/Views/ItemsPage.xaml
+++ b/Inv/Inv/Views/ItemsPage.xaml
@@ -43,6 +43,7 @@
                     </Button>
                 </StackLayout>
             </Frame>
+            <ActivityIndicator IsRunning="{Binding IsBusy}" IsVisible="{Binding IsBusy}" />
             <ListView
                 HasUnevenRows="True"
                 IsRefreshing="{Binding IsRefreshing}"
