--- a/Inv/Inv/Views/ItemsPage.xaml
+++ b/Inv/Inv/Views/ItemsPage.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:i18n="clr-namespace:Inv.Helpers"             
              x:Class="Inv.Views.ItemsPage"
-             BackgroundColor="{StaticResource Primary_Light}"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
+             BackgroundColor="{StaticResource Primary_Light}"
              Title="{i18n:Translate ItemsList}">
     <ContentPage.Content>
         <StackLayout
@@ -32,7 +32,7 @@
                         HorizontalOptions="StartAndExpand"
                         Command="{Binding InfoCommand}">
                     </Button>
-                    <Button Text="Scan >" 
+                    <Button Text="Scan" 
                             BackgroundColor="{StaticResource Accent}"
                             TextColor="{StaticResource Icons}"
                             WidthRequest="80" 
