--- a/Inv/Inv/App.xaml
+++ b/Inv/Inv/App.xaml
@@ -13,6 +13,7 @@
             <x:String x:Key="UrlPrefix">/api</x:String>
             <x:String x:Key="UrlItemsController">/Items</x:String>
             <x:String x:Key="UrlCountsController">/Counts</x:String>
+            <x:String x:Key="UrlMeasureUnitsController">/MeasureUnits</x:String>
 
             <!-- General colors -->
             <Color x:Key="MainColor">#ff3b77</Color>
