--- a/Inv/Inv/Views/NewCountPage.xaml
+++ b/Inv/Inv/Views/NewCountPage.xaml
@@ -1,79 +1,88 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:i18n="clr-namespace:Inv.Helpers"
-             x:Class="Inv.Views.NewCountPage"
-             BindingContext="{Binding Main, Source={StaticResource Locator}}"
-             Title="{i18n:Translate InventoryCount}">
+        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+        xmlns:i18n="clr-namespace:Inv.Helpers"
+        x:Class="Inv.Views.NewCountPage"
+        BindingContext="{Binding Main, Source={StaticResource Locator}}"
+        Title="{i18n:Translate InventoryCount}">
     <ContentPage.Content>
         <ScrollView
             BindingContext="{Binding NewCount}"
             BackgroundColor="{StaticResource Primary_Light}">
-        <StackLayout>
-            <Grid
-                VerticalOptions="CenterAndExpand">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
+            <StackLayout>
+                <Grid
+                    Padding="5,0,5,0"
+                    VerticalOptions="CenterAndExpand">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
+                    <Label
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Text="Item Id"
+                        TextColor="{StaticResource FontColor}"
+                        VerticalOptions="Center">
+                    </Label>
+                    <Entry
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Keyboard="Numeric"
+                        Text="{Binding ItemId}">
+                    </Entry>
+                    <Label
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Text="Barcode"
+                        TextColor="{StaticResource FontColor}"
+                        VerticalOptions="Center">
+                    </Label>
+                    <Entry
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Text="{Binding Barcode, Mode=TwoWay}">
+                    </Entry>
+                </Grid>
                 <Label
-                    Grid.Row="0"
-                    Grid.Column="0"
-                    Text="Item Id"
-                    TextColor="{StaticResource FontColor}"
-                    VerticalOptions="Center">
+                    Text="{Binding Description}"
+                    TextColor="{StaticResource FontColor}">
                 </Label>
-                <Entry
-                    Grid.Row="0"
-                    Grid.Column="1"
-                    Keyboard="Numeric"
-                    Text="{Binding ItemId}">
-                </Entry>
-                <Label
-                    Grid.Row="0"
-                    Grid.Column="2"
-                    Text="Barcode"
-                    TextColor="{StaticResource FontColor}"
-                    VerticalOptions="Center">
-                </Label>
-                <Entry
-                    Grid.Row="0"
-                    Grid.Column="3"
-                    Text="{Binding Barcode, Mode=TwoWay}">
-                </Entry>
-            </Grid>
-            <Label
-                Text="{Binding Description}"
-                TextColor="{StaticResource FontColor}">
-            </Label>
-            <StackLayout
-                Margin="40,0"
-                Orientation="Horizontal"
-                VerticalOptions="CenterAndExpand">
-                <Button
-                    BackgroundColor="Navy"
-                    BorderRadius="23"
-                    Command="{Binding SaveCommand}"
-                    HeightRequest="46"
-                    HorizontalOptions="FillAndExpand"
-                    IsEnabled="{Binding IsEnabled}"
-                    Text="{i18n:Translate Save}"
-                    TextColor="{StaticResource AccentColor2}">
-                </Button>
-                <Button
-                    BackgroundColor="{StaticResource Accent}"
-                    BorderRadius="23"
-                    Command="{Binding ScanCommand}"
-                    HeightRequest="46"
-                    HorizontalOptions="FillAndExpand"
-                    IsEnabled="{Binding IsEnabled}"
-                    Text="{i18n:Translate Scan}"
-                    TextColor="{StaticResource Icons}">
-                </Button>
+                <Picker 
+                    Title="--Select--"
+                    ItemsSource="{Binding MySqliteMeasureUnits}"
+                    ItemDisplayBinding="{Binding Description}"
+                    SelectedIndex="{Binding MeasureUnitSelectedIndex}">
+                </Picker>
+                <ActivityIndicator
+                    IsRunning="{Binding IsRunning}"
+                    VerticalOptions="CenterAndExpand">
+                </ActivityIndicator>                
+                <StackLayout
+                    Margin="40,0"
+                    Orientation="Horizontal"
+                    VerticalOptions="CenterAndExpand">
+                    <Button
+                        BackgroundColor="Navy"
+                        BorderRadius="23"
+                        Command="{Binding SaveCommand}"
+                        HeightRequest="46"
+                        HorizontalOptions="FillAndExpand"
+                        IsEnabled="{Binding IsEnabled}"
+                        Text="{i18n:Translate Save}"
+                        TextColor="{StaticResource AccentColor2}">
+                    </Button>
+                    <Button
+                        BackgroundColor="{StaticResource Accent}"
+                        BorderRadius="23"
+                        Command="{Binding ScanCommand}"
+                        HeightRequest="46"
+                        HorizontalOptions="FillAndExpand"
+                        IsEnabled="{Binding IsEnabled}"
+                        Text="{i18n:Translate Scan}"
+                        TextColor="{StaticResource Icons}">
+                    </Button>
+                </StackLayout>
             </StackLayout>
-        </StackLayout>
-    </ScrollView>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
