--- a/Inv/Inv/App.xaml
+++ b/Inv/Inv/App.xaml
@@ -14,6 +14,8 @@
             <x:String x:Key="UrlItemsController">/Items</x:String>
             <x:String x:Key="UrlCountsController">/Counts</x:String>
             <x:String x:Key="UrlMeasureUnitsController">/MeasureUnits</x:String>
+            <x:String x:Key="UrlLocationsController">/Locations</x:String>
+            <x:String x:Key="UrlBinsController">/Bins</x:String>
 
             <!-- General colors -->
             <Color x:Key="MainColor">#ff3b77</Color>
