--- a/Inv.Backend/Views/Counts/Delete.cshtml
+++ b/Inv.Backend/Views/Counts/Delete.cshtml
@@ -51,6 +51,14 @@
             @Html.DisplayFor(model => model.CountDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.UserName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UserName)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
