--- a/Inv.Backend/Views/Counts/Details.cshtml
+++ b/Inv.Backend/Views/Counts/Details.cshtml
@@ -50,6 +50,14 @@
             @Html.DisplayFor(model => model.CountDate)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.UserName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UserName)
+        </dd>
+
     </dl>
 </div>
 <p>
