--- a/Inv.Backend/Views/Counts/Index.cshtml
+++ b/Inv.Backend/Views/Counts/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Item.Barcode)
+            @Html.DisplayNameFor(model => model.Item.Description)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Location.Description)
@@ -26,13 +26,16 @@
         <th>
             @Html.DisplayNameFor(model => model.CountDate)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.UserName)
+        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Item.Barcode)
+            @Html.DisplayFor(modelItem => item.Item.Description)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Location.Description)
@@ -45,6 +48,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.CountDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.UserName)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.CountId }) |
