--- a/Inv/Inv/Views/NewCountPage.xaml
+++ b/Inv/Inv/Views/NewCountPage.xaml
@@ -11,7 +11,7 @@
             BindingContext="{Binding NewCount}"
             BackgroundColor="{StaticResource Primary_Light}">
             <StackLayout
-                Padding="5,0,5,0">
+                Padding="5">
                 <Label
                     FontAttributes="Bold"
                     HorizontalTextAlignment="Center"
@@ -26,7 +26,7 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="2*"/>
                     </Grid.ColumnDefinitions>
-                    <Label
+                     <Label
                         Grid.Row="0"
                         Grid.Column="0"
                         Text="Item Id"
@@ -37,7 +37,7 @@
                         Grid.Row="0"
                         Grid.Column="1"
                         Keyboard="Numeric"
-                        Text="{Binding Item.ItemId, Mode=TwoWay}">
+                        Text="{Binding ItemId, Mode=TwoWay}">
                         <Entry.Behaviors>
                             <b:EventToCommandBehavior
                                 EventName="TextChanged"
@@ -56,7 +56,8 @@
                     <Entry
                         Grid.Row="1"
                         Grid.Column="1"
-                        Text="{Binding Barcode, Mode=TwoWay}">
+                        Text="{Binding Barcode, Mode=TwoWay}"
+                        IsEnabled="{Binding IsBarcodeEntryEnabled}">
                         <Entry.Behaviors>
                             <b:EventToCommandBehavior
                                 EventName="TextChanged"
@@ -108,9 +109,6 @@
                         Keyboard="Telephone">
                     </Entry>                    
                 </Grid>
-                <Label HorizontalTextAlignment="Center"
-                    Text="{Binding LocationSelected.LocationId}" >
-                </Label>
                 <ActivityIndicator
                     IsRunning="{Binding IsRunning}"
                     VerticalOptions="CenterAndExpand">
